# annotaria

./: .gitignore  LICENSE  README.md  bag2images.py  coco-viz.py  pyproject.toml  runv  setup.sh
.github/workflows/: pytest.yaml
scripts/: coco-viz.py  coco2labelme.py  labelme2coco-launcher.py
src/annotaria/: __init__.py  autolabel.py  bag2images.py  coco2labelme.py  cocoviz.py  interpolator.py  labelme.py  labelme2coco.py
src/annotator/: __init__.py  cocoviz.py  labelme2coco.py
tests/: test_annotator.py
tests/gt/: 000000002592.json  000000011122.json  000000013348.json  images-interp.json  images.json
