[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "annotaria"
version = "1.0.0"
description = "xxx"
authors = [{ name = "Raul Tapia", email = "raultapia@us.es" }]
license = "GPL-3.0-or-later"
requires-python = ">=3.7"
dependencies = [
    "argparse",
    "bagpy",
    "cv-bridge",
    "labelme",
    "labelme2coco",
    "numpy",
    "opencv-python",
    "pillow",
    "pyqt5",
    "tqdm",
]

[project.scripts]
bag2images = "annotaria.bag2images:main"
coco2labelme = "annotaria.coco2labelme:main"
cocoviz = "annotaria.cocoviz:main"
interpolator = "annotaria.interpolator:main"
labelme = "annotaria.labelme:main"
labelme2coco = "annotaria.labelme2coco:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["annotaria"]

[tool.distutils.egg_info]
egg_base = "."
